--- a/faleconosco.html
+++ b/faleconosco.html
@@ -85,7 +85,7 @@
       
 <!-- Formulário -->
         <div style="align-items: center;" class="linha3">
-        <form style="width: 1000px; text-align: center;" action="https://formsubmit.co/negocios@consultern.com.br" method="POST">
+        <form style="width: 1000px; text-align: center;" action="https://formsubmit.co/ellen@consultern.com.br" method="POST">
           <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 20px;">
             <!-- Primeiro Input -->
             <div class="inputBox" style="flex: 1;">
